[package]
name = "backend"
version = "0.1.0"
authors = ["Tomas Van Roose <tomas.vanroose@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
pretty_env_logger = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "postgres", "chrono", "macros" ] }
dotenv = "0.15.0"
